fix scrollbar padding in profile

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -45,7 +45,7 @@ body{
 .container {
     width: 80%; 
     max-width: 78%; 
-    margin: 20px auto; 
+    margin: 0px auto; 
     padding: 0px; 
     background-color: #fff; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
